[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backend._legacy:_legacy:_Backend"

[project]
name = "initarch"
version = "0.1.0"
description = "Scaffold your new projects into spec driven style project structure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Amulya Jain", email = "jainamulyawin@gmail.com" }
]
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
initarch = "initarch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
initarch = ["templates/**/*.md", "templates/**/*.txt"]